[tool.poetry]
name = "whiplash-client"
version = "0.1.1"
description = "Blazing-fast lightweight vector store on top of DynamoDB"
authors = ["Eric Mills <ericmills2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "whiplash" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
xxhash = "^3.3.0"
boto3 = "^1.28.17"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
moto = "^4.1.14"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
